# audio-server

./: .gitignore  Dockerfile  audio-server.cabal  stack.yaml
client/: Main.hs
server/: Main.hs
src/Sound/Server/: Devices.hs  Pulse.hs
