name:                audio-server
version:             0.1.0.0
synopsis:            Stream audio to hosts across your LAN
description:         Please see README.md
homepage:            https://github.com/chances/audio-server#readme
license:             MIT
license-file:        LICENSE
author:              Chance Snow
maintainer:          git@chancesnow.me
category:            App
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sound.Server.Pulse
                     , Sound.Server.Devices
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-audio
                     , conduit-extra
                     , pulse-simple
                     , cereal
                     , Command
                     , process
                     , resourcet
                     , text
                     , vector
  default-language:    Haskell2010

executable audio-server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , audio-server
  default-language:    Haskell2010

executable audio-server-client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , audio-server
  default-language:    Haskell2010

test-suite audio-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , audio-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chances/audio-server
